--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <header id="left-header" class="header">
     <nav id="menu" class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index-2.html"> <img id="logo_one" src="/images/lakshita.jpg" alt="logo"> </a>
+            <a class="navbar-brand" href="index.html"> <img id="logo_one" src="/images/lakshita.jpg" alt="logo"> </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul id="navbar" class="nav navbar-nav navbar-right">
