--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 <!--======= Header =======-->
 
 <div class="menu-responsive">
-    <a href="index.html"><img id="logo_img" src="/images/lakshita.jpg" alt="logo"></a>
+    <a href="index.html"><img id="logo_img" src="images/lakshita.jpg" alt="logo"></a>
     <a id="menu-icon" class="but" href="#"><span class="ti-menu"></span> </a>
 </div>
 <header id="left-header" class="header">
     <nav id="menu" class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"> <img id="logo_one" src="/images/lakshita.jpg" alt="logo"> </a>
+            <a class="navbar-brand" href="index.html"> <img id="logo_one" src="images/lakshita.jpg" alt="logo"> </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul id="navbar" class="nav navbar-nav navbar-right">
