--- a/index.html
+++ b/index.html
@@ -58,14 +58,10 @@
 <!--======= Header =======-->
 
 <div class="menu-responsive">
-    <a href="index.html"><img id="logo_img" src="images/lakshita.jpg" alt="logo"></a>
     <a id="menu-icon" class="but" href="#"><span class="ti-menu"></span> </a>
 </div>
 <header id="left-header" class="header">
     <nav id="menu" class="navbar navbar-default">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"> <img id="logo_one" src="images/lakshita.jpg" alt="logo"> </a>
-        </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul id="navbar" class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#banner" class="page-scroll">Home</a></li>
@@ -120,7 +116,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="about-image">
-                        <img class="img-responsive" src="images/me.jpg" alt="">
+                        <img class="img-responsive" src="images/lakshita.jpg" alt="">
                         <img class="signature" src="images/signature.png" alt="">
                     </div>
                 </div>
