--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="about-image">
                         <img class="img-responsive" src="images/me.jpg" alt="">
-                        <img class="signature" src="images/signature.png" alt="">
+                        <!-- <img class="signature" src="images/signature.png" alt=""> -->
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8">
