resume name updated

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="col-md-12 text-left">
                             <h2>HELLO,<br>THIS IS Lakshita Verma </h2>
                             <div id="typer"></div>
-                            <a class="button blue" href="resume/LakshitaVerma_Resume.pdf" download>Download my CV</a>
+                            <a class="button blue" href="resume/LakshitaVerma_CV.pdf" download>Download my CV</a>
                         </div>
                     </div>
                 </div>
