--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="col-md-12 text-left">
                             <h2>HELLO,<br>THIS IS Lakshita Verma </h2>
                             <div id="typer"></div>
-                            <a class="button blue" href="resume/LakshitaVerma_CV.pdf" download>Download my CV</a>
+                            <a class="button blue" href="resume/LakshitaVerma_Resume.pdf" download>Download my CV</a>
                         </div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                                 </div>
                             </div>
                             <div class="about-block clearfix">
-                                <p>Hello! I’m Lakshita Verma. <b>Software Engineer Intern at Directi</b> specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, HTML, CSS and Bootstrap. Stng background in project management and customer relations.</p>
+                                <p>Hello! I’m Lakshita Verma. <b>Software Development Engineer at Zomato</b> specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, HTML, CSS and Bootstrap. Stng background in project management and customer relations.</p>
                                 <p>I am a passionate web developer and like to have challenges in my work. I am smart thinker and self driven.</p>
                                 <div class="about-social">
                                     <ul>
